<resources>
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="div">/</string>
    <string name="mul">*</string>
    <string name="equal">=</string>
    <string name="clear">Clear</string>
    <string name="user">UserName</string>
    <string name="pas">PassWord</string>
    <string name="Log">Login</string>
    <string name="euser">Enter UserName</string>
    <string name="pass">Enter PassWord</string>
    <string name="Help">Help</string>
    <string name="Exit">Exit</string>
    <string name="todo">TODO</string>
    <string name="Back">Back</string>
    <string name="signout">SignOut</string>
</resources>